--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,14 @@
     "start": "nodemon ./bin/www localhost 3000"
   },
   "dependencies": {
-    "body-parser": "~1.16.0",
+    "body-parser": "^1.16.1",
     "connect-history-api-fallback": "^1.3.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
-    "express": "~4.14.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.8",
+    "express": "^4.14.1",
+    "jade": "^1.11.0",
+    "morgan": "^1.7.0",
+    "serve-favicon": "^2.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
